--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@
 	<div class="ba-container">
 	<section class="section gallery">
 		<div class="gallery__header ba-text-center">
-			<h1 class="section__title">Featured Product</h1>
-			<div class="gallery__underline ">
-				<img src="img/underline.png" alt="------">
-			</div>
+			<h1 class="section__title section__title--underline">Featured Product</h1>
 			<p class="section__descr ">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</div>
 
@@ -78,7 +75,7 @@
 				</div>
 
 				<div class="ba-width-1-3">
-					<div class="gallery__item" style="background-image: url(img/im44g.jpg);">
+					<div class="gallery__item acticve" style="background-image: url(img/im44g.jpg);">
 							<div class="gallery__overlay">
 								<div class="gallery__content">
 									<div class="gallery__text">Minimal Product Design</div>
